--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "cli-table": "^0.3.1",
     "graphql": "^0.11.7",
     "isomorphic-fetch": "^2.2.1",
-    "lodash.sortby": "^4.7.0"
+    "lodash.sortby": "^4.7.0",
+    "nodemon": "^1.12.1",
+    "p-memoize": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^4.8.0",
